--- a/oklogin/Base.lproj/Main.storyboard
+++ b/oklogin/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" userLabel="Login View Controller" customClass="MainViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="Login View Controller" customClass="LoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -77,6 +77,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                         <state key="normal" title="Login"/>
                                         <connections>
+                                            <action selector="onLoginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IjA-XC-nXf"/>
                                             <segue destination="FWE-k1-K7M" kind="show" id="FpL-tT-KxJ"/>
                                         </connections>
                                     </button>
@@ -98,7 +99,7 @@
         <!--Logged In View Controller-->
         <scene sceneID="Nt0-ea-fYh">
             <objects>
-                <viewController id="FWE-k1-K7M" userLabel="Logged In View Controller" customClass="MainViewController" sceneMemberID="viewController">
+                <viewController id="FWE-k1-K7M" userLabel="Logged In View Controller" customClass="LoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ubC-0U-vrA"/>
                         <viewControllerLayoutGuide type="bottom" id="z2V-0X-Oyp"/>
@@ -108,7 +109,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KP1-fs-9uT">
-                                <rect key="frame" x="137" y="291" width="100" height="51"/>
+                                <rect key="frame" x="137" y="247" width="100" height="51"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <state key="normal" title="Logout"/>
                                 <connections>
