--- a/oklogin/Base.lproj/Main.storyboard
+++ b/oklogin/Base.lproj/Main.storyboard
@@ -39,41 +39,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="MlW-Do-Ycz">
-                                <rect key="frame" x="68.5" y="239.5" width="238" height="188"/>
+                                <rect key="frame" x="50" y="239.5" width="275" height="188"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xu6-3i-xrh">
-                                        <rect key="frame" x="42.5" y="0.0" width="153.5" height="38.5"/>
+                                        <rect key="frame" x="61" y="0.0" width="153.5" height="38.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Your Username" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NOD-iy-qzT">
-                                        <rect key="frame" x="0.0" y="38.5" width="238" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NOD-iy-qzT">
+                                        <rect key="frame" x="0.0" y="38.5" width="275" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="CDy-AB-6Um"/>
+                                            <constraint firstAttribute="width" constant="275" id="Kd0-O6-ctQ"/>
                                         </constraints>
                                         <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K3w-L2-1Vj">
-                                        <rect key="frame" x="46.5" y="68.5" width="145" height="38.5"/>
+                                        <rect key="frame" x="65" y="68.5" width="145" height="38.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="YourPassword" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9o4-iJ-9CX">
-                                        <rect key="frame" x="8" y="107" width="222.5" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9o4-iJ-9CX">
+                                        <rect key="frame" x="0.0" y="107" width="275" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="222.5" id="pZ3-qP-Y52"/>
+                                            <constraint firstAttribute="width" constant="275" id="pZ3-qP-Y52"/>
                                             <constraint firstAttribute="height" constant="30" id="rAe-ev-Fvi"/>
                                         </constraints>
                                         <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lN6-AN-KMK">
-                                        <rect key="frame" x="79.5" y="137" width="79" height="51"/>
+                                        <rect key="frame" x="98" y="137" width="79" height="51"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                         <state key="normal" title="Login"/>
                                         <connections>
@@ -91,6 +92,10 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="FW1-AW-EQ3"/>
+                    <connections>
+                        <outlet property="passwordTextField" destination="9o4-iJ-9CX" id="OlB-1V-ubn"/>
+                        <outlet property="userNameTextField" destination="NOD-iy-qzT" id="czG-8v-qXy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -127,7 +132,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bOf-sS-t1w" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="650" y="-151"/>
+            <point key="canvasLocation" x="703" y="-239"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
